--- a/config/dev-config.ini
+++ b/config/dev-config.ini
@@ -27,6 +27,9 @@ app_token=123temporaryToken1
 [loaderio]
 token=testloaderio
 
+[logging]
+level=DEBUG
+
 [dropbox]
 app_key=testappkey
 app_secret=testappsecret
